--- a/css/components/container.css
+++ b/css/components/container.css
@@ -27,6 +27,10 @@
     justify-content: space-evenly;
 }
 
+.space-around{
+    justify-content: space-around;
+}
+
 .width-limit{
     max-width: 410px;
 }
