--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -27,3 +27,10 @@
     text-shadow: 1px 2px rgb(0 0 0 / 50%);
     opacity: 0.8;
 }
+
+@media (max-width: 580px) {
+  
+    .banner{
+        
+    }
+}
