--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -28,9 +28,9 @@
     opacity: 0.8;
 }
 
-@media screen (max-width: 580px) {
+@media (max-width: 620px) {
   
     .banner{
-        width: 150%;
+        width: 115%;
     }
 }
